--- a/src/main/resources/templates/editMovie.html
+++ b/src/main/resources/templates/editMovie.html
@@ -6,12 +6,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
-  <div class="card" th:if="${returnedResponse != null}">
-    <div class="card-body">
-      <div class="card-text" th:text="${returnedResponse}"></div>
+  <div class="row mt-3">
+    <div class="card offset-md-2 col-md-8 bg-success" th:if="${returnedResponse != null}">
+      <div class="card-body">
+        <div class="card-text text-center text-white" th:text="${returnedResponse}"></div>
+      </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container mt-3">
     <form action="#" th:action="@{/movies/saveEdit/__${movieId}__}" method="post" th:if="${movieDTO != null}">
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
